# haskell-p-adics

./: LICENSE  README.md  p-adics.cabal  stack.yaml
src/: PAdics.hs
src/Math/PAdic/: Q.hs  Z.hs
src/Math/PAdic/Finite/: Q.hs  Z.hs
