name:                p-adics
version:             0.1.0.0
homepage:            https://github.com/drbsg/haskell-p-adics
bug-reports:         https://github.com/drbsg/haskell-p-adics/issues
license:             BSD3
license-file:        LICENSE
author:              Brett Gibson
maintainer:          drbsg75@googlemail.com
copyright:           Copyright 2018 Brett Gibson
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
stability:           Experimental
synopsis:            Computable p-adic numbers
-- description:
category:            Math, Number Theory

library
  hs-source-dirs:      src
  exposed-modules:     Math.PAdic.Z
                     , Math.PAdic.Q
  build-depends:       base >= 4.7 && < 5
                     , extended-reals
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/drbsg/haskell-p-adics
